--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
          <!-- -->
         </p>
         <p class="text-sm text-gray-300">
-         Aku ingat betul saat pertama kali kita bertemu. Mungkin saat itu kita belum tahu, tapi hati udah lebih dulu bicara.
+         Aku ingat betul saat pertama kali kita bertemu. Mungkin saat itu kita belum tahu, tapi hati sudah lebih dulu bicara.
         </p>
        </div>
       </div>
